--- a/portfolio/src/components/Header.css
+++ b/portfolio/src/components/Header.css
@@ -1,8 +1,8 @@
 /* Header.css */
 
 header {
-    background-color: #333; /* Change to your desired background color */
-    color: #fff; /* Change to your desired text color */
+    background-color: black; 
+    color: #fff; 
     padding: 20px;
     display: flex;
     justify-content: space-between;
@@ -25,6 +25,10 @@ header {
   
   nav a {
     text-decoration: none;
-    color: #fff; /* Change to your desired link color */
+    color: #fff; 
     font-weight: bold;
   }
+
+.nate {
+  padding-left: 25px;
+}
