--- a/portfolio/src/pages/AboutMe.css
+++ b/portfolio/src/pages/AboutMe.css
@@ -7,7 +7,7 @@ body {
     max-width: 50px;
     height: 50px;
     border-radius: 48%;
-    box-shadow: 3px -3px 20px darkseagreen;
+    box-shadow: 3px -3px 20px 10px gray;
 }
 
 .about-me {
