--- a/portfolio/src/components/Footer.css
+++ b/portfolio/src/components/Footer.css
@@ -2,14 +2,14 @@
 
 
 .footer {
-    background-color: black;
+    background-color: #25293A;
     color: black;
     padding: 13px;
     text-align: center;
     position: fixed;
     width: 100%;
-    height: 10px;
-    bottom: 0;
+    height: 5%;
+    bottom: 0px;
   }
 
   .footer div {
@@ -17,13 +17,14 @@
   }
 
   .footer a {
-    color: #fff;
+    color: #F0F0F0;
     text-decoration: none;
     margin: 0 10px;
   }
   
   .footer a:hover {
     text-decoration: underline;
+    color: lightblue;
   }
 
   @media (max-width: 297px) {
