--- a/portfolio/src/components/project.css
+++ b/portfolio/src/components/project.css
@@ -1,34 +1,50 @@
 .project {
-    margin: 20px;
-    text-align: center;
-    display: inline-block;
-    width: calc(50% - 40px); /* 2 items per row with spacing */
-    height: auto;
-    box-sizing: border-box;
-    position: relative;
-  
-    /* Additional styles for hover effect */
-    transition: transform 0.3s ease;
-  }
-  
-  .project-image-container {
-    position: relative;
-    overflow: hidden;
-    border: 1px solid #ddd;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    padding-top: 100%; /* 1:1 aspect ratio (square) */
-  }
+  margin: 20px;
+  text-align: center;
+  display: inline-block;
+  width: calc(50% - 40px); 
+  height: auto;
+  box-sizing: border-box;
+  position: relative;
+ 
+
+
+  transition: transform 0.3s ease;
+}
+
+h2 {
+  font-size: 40px;
+    margin-bottom: 20px;
+    font-weight: bold;
+    color: lightblue;
+}
+
+.protfolio {
+  font-size: 45px;
+}
+
+.project-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.project-image-container {
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #ddd;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  flex-grow: 1; 
+}
   
   .project-image {
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
-    object-fit: cover; /* Maintain aspect ratio and cover the container */
+    width: 1100px; 
+    height: 500px; 
+    object-fit: cover; 
   }
   
   .project-image:hover {
-    transform: scale(1.2);
+    transform: scale(1.5) !important;
   }
   
   .project-overlay {
@@ -52,17 +68,47 @@
   }
   
   .project-title {
-    font-size: 20px;
+    font-size: 50px;
     font-weight: bold;
     margin-bottom: 10px;
+    color: lightblue;
   }
   
   .project-description {
-    font-size: 14px;
+    font-size: 30px;
+    padding-bottom: 5%;
+  }
+
+  .btn-primary {
+    font-size: 20px;
+  }
+
+  .btn-primary:hover {
+    color: lightblue;
+  }
+
+  .btn-secondary:hover {
+    color: lightblue;
   }
   
   @media (max-width: 768px) {
     .project {
-      width: 100%; /* Full width on smaller screens */
+      width: 90%; 
+
+
+      .project-image {
+        width: 100%; 
+        height: 200px; 
+        object-fit: cover;
+      }
+
+      .project-title {
+        font-size: 18px;
+      }
+
+      .project-description {
+        font-size: 12px;
+      }
+
     }
   }
